# tauri-bridge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: async_commands.rs  basic_usage.rs  complex_types.rs
src/: backend.rs  client.rs  lib.rs  tests.rs  types.rs
tests/: client_integration.rs  macro_expansion.rs  tauri_integration.rs
